packages/language/src/__tests__/__fixtures__/invalid/invalid-provider.eligian
// Test fixture: Invalid timeline provider (T042)
// Should trigger validation error: "Invalid timeline provider"

// Invalid provider name - must be: video, audio, raf, or custom
timeline "test" in ".test-container" using websocket from "ws://localhost:8080" {
  at 0s..5s [
    selectElement("#element")
    addClass("visible")
  ] [
    removeClass("visible")
  ]
}
